k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nittfest
  labels:
    app.kubernetes.io/part-of: nittfest
